Fixed: Bug 35969 - [L3] content of portal widget cut off

--- a/ui/apps/io.ox/portal/style.less
+++ b/ui/apps/io.ox/portal/style.less
@@ -252,6 +252,10 @@
                 font-weight: bold;
             }
 
+            li .bold {
+                line-height: 1em;
+            }
+
             .italic {
                 font-style: italic;
             }
